media-stack/sonarr/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-service
  namespace: media-stack
spec:
  selector:
    app: sonarr
  ports:
    - protocol: TCP
      port: 8989
      targetPort: 8989
  type: ClusterIP
